--- a/web/nav.html
+++ b/web/nav.html
@@ -532,10 +532,11 @@ Main layout
 
 
 <body>
+<!--
 
-<!--Main Navigation-->
+Main Navigation
 <header>
-    <!-- Sidebar -->
+     Sidebar
     <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
         <div class="position-sticky">
             <div class="list-group list-group-flush mx-3 mt-4">
@@ -559,30 +560,30 @@ Main layout
             </div>
         </div>
     </nav>
-    <!-- Sidebar -->
+     Sidebar
 
-    <!-- Navbar -->
+     Navbar
     <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-        <!-- Container wrapper -->
+         Container wrapper
         <div class="container-fluid">
-            <!-- Toggle button -->
+             Toggle button
             <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
 
-            <!-- Brand -->
+             Brand
             <a class="navbar-brand" href="#">
                 <img src="https://mdbootstrap.com/img/logo/mdb-transaprent-noshadows.png" height="25" alt="" loading="lazy" />
             </a>
-            <!-- Search form -->
+             Search form
             <form class="d-none d-md-flex input-group w-auto my-auto">
                 <input autocomplete="off" type="search" class="form-control rounded" placeholder='Search (ctrl + "/" to focus)' style="min-width: 225px" />
                 <span class="input-group-text border-0"><i class="fas fa-search"></i></span>
             </form>
 
-            <!-- Right links -->
+             Right links
             <ul class="navbar-nav ms-auto d-flex flex-row">
-                <!-- Notification dropdown -->
+                 Notification dropdown
                 <li class="nav-item dropdown">
                     <a class="nav-link me-3 me-lg-0 dropdown-toggle hidden-arrow" href="#" id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-bell"></i>
@@ -597,20 +598,20 @@ Main layout
                     </ul>
                 </li>
 
-                <!-- Icon -->
+                 Icon
                 <li class="nav-item">
                     <a class="nav-link me-3 me-lg-0" href="#">
                         <i class="fas fa-fill-drip"></i>
                     </a>
                 </li>
-                <!-- Icon -->
+                 Icon
                 <li class="nav-item me-3 me-lg-0">
                     <a class="nav-link" href="#">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
 
-                <!-- Icon dropdown -->
+                 Icon dropdown
                 <li class="nav-item dropdown">
                     <a class="nav-link me-3 me-lg-0 dropdown-toggle hidden-arrow" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
                         <i class="united kingdom flag m-0"></i>
@@ -650,7 +651,7 @@ Main layout
                     </ul>
                 </li>
 
-                <!-- Avatar -->
+                 Avatar
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle hidden-arrow d-flex align-items-center" href="#" id="navbarDropdownMenuLinks" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
                         <img src="https://mdbootstrap.com/img/Photos/Avatars/img (31).jpg" class="rounded-circle" height="22" alt="" loading="lazy" />
@@ -663,16 +664,16 @@ Main layout
                 </li>
             </ul>
         </div>
-        <!-- Container wrapper -->
+         Container wrapper
     </nav>
-    <!-- Navbar -->
+     Navbar
 </header>
-<!--Main Navigation-->
+Main Navigation
 
-<!--Main layout-->
+Main layout
 <main style="margin-top: 58px">
     <div class="container pt-4">
-        <!-- Section: Main chart -->
+         Section: Main chart
         <section class="mb-4">
             <div class="card">
                 <div class="card-header py-3">
@@ -683,9 +684,9 @@ Main layout
                 </div>
             </div>
         </section>
-        <!-- Section: Main chart -->
+         Section: Main chart
 
-        <!--Section: Sales Performance KPIs-->
+        Section: Sales Performance KPIs
         <section class="mb-4">
             <div class="card">
                 <div class="card-header text-center py-3">
@@ -777,9 +778,9 @@ Main layout
                 </div>
             </div>
         </section>
-        <!--Section: Sales Performance KPIs-->
+        Section: Sales Performance KPIs
 
-        <!--Section: Minimal statistics cards-->
+        Section: Minimal statistics cards
         <section>
             <div class="row">
                 <div class="col-xl-3 col-sm-6 col-12 mb-4">
@@ -988,9 +989,9 @@ Main layout
                 </div>
             </div>
         </section>
-        <!--Section: Minimal statistics cards-->
+        Section: Minimal statistics cards
 
-        <!--Section: Statistics with subtitles-->
+        Section: Statistics with subtitles
         <section>
             <div class="row">
                 <div class="col-xl-6 col-md-12 mb-4">
@@ -1077,12 +1078,11 @@ Main layout
                 </div>
             </div>
         </section>
-        <!--Section: Statistics with subtitles-->
+        Section: Statistics with subtitles
     </div>
 </main>
-<!--Main layout-->
+Main layout
 
-<!--
 <body id="body-pd">
 <header class="header" id="header">
     <div class="header_toggle"> <i class='bx bx-menu bg-black' id="header-toggle"></i> </div>
@@ -1102,6 +1102,50 @@ Main layout
 &lt;!&ndash;Container Main end&ndash;&gt;
 
 -->
+
+<form class="row g-3">
+    <div class="col-md-4">
+        <div class="form-outline">
+            <input type="text" class="form-control" id="validationDefault01" value="Mark" required />
+            <label for="validationDefault01" class="form-label">First name</label>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="form-outline">
+            <input type="text" class="form-control" id="validationDefault02" value="Otto" required />
+            <label for="validationDefault02" class="form-label">Last name</label>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="input-group form-outline">
+            <span class="input-group-text" id="inputGroupPrepend2">@</span>
+            <input type="text" class="form-control" id="validationDefaultUsername" aria-describedby="inputGroupPrepend2" required />
+            <label for="validationDefaultUsername" class="form-label">Username</label>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="form-outline">
+            <input type="text" class="form-control" id="validationDefault03" required />
+            <label for="validationDefault03" class="form-label">City</label>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="form-outline">
+            <input type="text" class="form-control" id="validationDefault05" required />
+            <label for="validationDefault05" class="form-label">Zip</label>
+        </div>
+    </div>
+    <div class="col-12">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required />
+            <label class="form-check-label" for="invalidCheck2">Agree to terms and conditions</label>
+        </div>
+    </div>
+    <div class="col-12">
+        <button class="btn btn-primary" type="submit">Submit form</button>
+    </div>
+</form>
+
 
 <script src="assets/jquery/jquery-3.6.0.min.js"></script>
 <!--<script src="assets/bootstrap/js/bootstrap.min.js"></script>-->
